crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__transcode_command_tests__transcode_command_flac16_441.snap
---
source: crates/core/src/commands/transcode/tests/transcode_command_tests.rs
expression: snapshot
---
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: Test Artist - Test Album - 01 Track One.mp3
  size: 2604836
  sha256: 9d41a4697d29d3e4383b7734d9b1cf36a434594567d1efaac690ca767780c60d
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: Test Artist - Test Album - 02 Track Two.mp3
  size: 2604836
  sha256: 294c13aa0216f84d19558585b0e4eb21978f87801ce00524274ed34eb0a01946
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: Test Artist - Test Album - 01 Track One.mp3
  size: 786206
  sha256: 8ae45d463c483a8359379245a040824ad45bae5a55c16f04557f5aeb72eb471a
  audio:
    duration_ms: 65045
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: Test Artist - Test Album - 02 Track Two.mp3
  size: 737300
  sha256: fa46b9cc14ded3f8a6c4031fc36593e2ba48c2f26c0353966a99e5cb951be7fd
  audio:
    duration_ms: 65045
    overall_bitrate: 90
    audio_bitrate: 90
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
