crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__transcode_command_tests__transcode_command_flac16_48.snap
---
source: crates/core/src/commands/transcode/tests/transcode_command_tests.rs
expression: snapshot
---
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: Test Artist - Test Album - 01 Track One.mp3
  size: 2604556
  sha256: 76ac35466d9bc0bcc9f1a77b9d1fa079760a2bcc702bbae33abdd866462fc415
  audio:
    duration_ms: 65040
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 48000
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: Test Artist - Test Album - 02 Track Two.mp3
  size: 2604556
  sha256: 5f2a748f208e8afe8acb8d18508a6567eb8fa3d688bee95a263303aa847a28eb
  audio:
    duration_ms: 65040
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 48000
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: Test Artist - Test Album - 01 Track One.mp3
  size: 783964
  sha256: fe4fb5ed81680897de5e58193662a0414d099566101c9f1ae529b780e0773e05
  audio:
    duration_ms: 65040
    overall_bitrate: 96
    audio_bitrate: 96
    sample_rate: 48000
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: Test Artist - Test Album - 02 Track Two.mp3
  size: 768460
  sha256: 03da5e171b38c451403504bbe682f49e7358025ade1ffb1e235eb0470f6e8163
  audio:
    duration_ms: 65040
    overall_bitrate: 94
    audio_bitrate: 94
    sample_rate: 48000
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
