crates/core/src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__transcode_command_tests__transcode_command_flac24_96.snap
---
source: crates/core/src/commands/transcode/tests/transcode_command_tests.rs
expression: snapshot
---
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: Test Artist - Test Album - 01 Track One.mp3
  size: 2604556
  sha256: 2a40b597f10e46f87aa06107f28253656d46114d31222fe7d489f6bd3ed5ea67
  audio:
    duration_ms: 65040
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 48000
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: Test Artist - Test Album - 02 Track Two.mp3
  size: 2604556
  sha256: db688dbdf7d43b0b0b31067c00832b0bd0598a7b366320227ddb2e8a29220a66
  audio:
    duration_ms: 65040
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 48000
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB FLAC]"
  filename: Test Artist - Test Album - 01 Track One.flac
  size: 2202166
  sha256: 51d2b39a616c92f9c067b0b5d9bd14934c7ace4f2178a26312a65d6a9499ee4a
  audio:
    duration_ms: 65000
    overall_bitrate: 271
    audio_bitrate: 270
    sample_rate: 48000
    bit_depth: 16
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures: []
- directory: "Test Artist - Test Album [2020] [WEB FLAC]"
  filename: Test Artist - Test Album - 02 Track Two.flac
  size: 2398235
  sha256: 421277389c9ccf307b9ed9db303268cafa819ed05d55eed5a674409105c4a0f3
  audio:
    duration_ms: 65000
    overall_bitrate: 295
    audio_bitrate: 295
    sample_rate: 48000
    bit_depth: 16
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures: []
- directory: "Test Artist - Test Album [2020] [WEB FLAC]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: Test Artist - Test Album - 01 Track One.mp3
  size: 1406212
  sha256: d915ef8e445a53b6c55995b94dde84c0410319b6803dd57844a702268e82d595
  audio:
    duration_ms: 65040
    overall_bitrate: 172
    audio_bitrate: 172
    sample_rate: 48000
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: Test Artist - Test Album - 02 Track Two.mp3
  size: 1430764
  sha256: 0edae561c4476498e00631b825fd1c8b713eb951940d68a3c0f5d937ba7d542e
  audio:
    duration_ms: 65040
    overall_bitrate: 175
    audio_bitrate: 175
    sample_rate: 48000
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Test Artist - Test Album [2020] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
